--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -104,7 +104,6 @@ server {
         ## stripping query parameters:
         rewrite ^/static/css/fonts\.css(?<version>\?v=[0-9]+)$ /static/css/fonts-VERSIONED.css$version permanent;
         rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
-        rewrite ^/(?<original>.*)\?revision\=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?chat$ /$original permanent;
         rewrite ^/(?<original>.*)\?feedback.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
@@ -116,7 +115,7 @@ server {
         rewrite ^/(?<original>.*)\?usg=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?fbid.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?fbclid.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?revisi.*$ /$original permanent;
         rewrite ^(?<original>.*)\?.*callback=.*from=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
@@ -806,6 +805,8 @@ server {
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
         rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
         rewrite ^/tatic/(?<old>.*)$ /static/$old permanent;
+        rewrite ^/doc/anime/eva/anime/eva/(?<old>.*)$ /doc/anime/eva/$old permanent;
+        rewrite ^/(?<old>.*)/index/wp$ /$old/index permanent;
 
         # rewrite LW links like `/posts/5yFRd3cjLpm3Nd6Di/argument-screens-off-authority` (17 character ID):
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
