--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5092,7 +5092,7 @@ default "";
 "~^/doc/design/typography/2000-thanh.pdf.*$" "/doc/design/typography/tex/2000-thanh.pdf";
 "~^/doc/design/typography/2007-rhatigan.pdf.*$" "/doc/design/typography/tex/2007-rhatigan.pdf";
 "~^/doc/economics/1994-romanelli.pdf.*$" "/doc/economics/automation/1994-romanelli.pdf";
-"~^/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry=pyramid1.jpg.*$" "/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry-pyramid1.jpg";
+"~^/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry\=pyramid1.jpg.*$" "/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry-pyramid1.jpg";
 
 # merging of image+doc, and cleaning up all the legacy filenames and mish-mash directories:
 "~^/image/2002-radiance/cover.png.*$" "/image/radiance/cover.png";
@@ -6737,7 +6737,7 @@ default "";
 "~^/image/fiction/humor/dinosaur-comics/gwern-blindfaith.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-blindfaith.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-dcpresentskinglear.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-dcpresentskinglear.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-everybody-was-not-kungfu-fighting.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-everybody-was-not-kungfu-fighting.png";
-"~^/image/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50$-value.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50$-value.png";
+# "~^/image/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50\$-value.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50$-value.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-hmm-thatsgoodmeta.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-hmm-thatsgoodmeta.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-hownottomakeacomic.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-hownottomakeacomic.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-ihadnochoiceimsorry.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-ihadnochoiceimsorry.png";
@@ -6761,7 +6761,7 @@ default "";
 "~^/image/fiction/humor/dinosaur-comics/gwern-today-we-mock-religion-ha-ha-its-all-in-good-fun.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-today-we-mock-religion-ha-ha-its-all-in-good-fun.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-unorthodoxy-thebestkindoforthodoxy.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-unorthodoxy-thebestkindoforthodoxy.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-wishing-something-into-existence-is-hip.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-wishing-something-into-existence-is-hip.png";
-"~^/image/fiction/humor/dinosaur-comics/gwern-x-x-y=1.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-x-x-y=1.png";
+"~^/image/fiction/humor/dinosaur-comics/gwern-x-x-y\=1.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-x-x-y=1.png";
 "~^/image/fiction/humor/dinosaur-comics/gwern-yoquierokitte.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-yoquierokitte.png";
 "~^/image/fiction/humor/gwern-meme-breakingbad-walterwhite-jessewhatthehellareyoutalkingabout.jpg.*$" "/doc/fiction/humor/gwern-meme-breakingbad-walterwhite-jessewhatthehellareyoutalkingabout.jpg";
 "~^/image/fiction/humor/hardtruthsfromsoftcats.tumblr.com/2012-08-16-tumblr_m8u6loy2ex1re0dy6o1_640.png.*$" "/doc/fiction/humor/hardtruthsfromsoftcats.tumblr.com/2012-08-16-tumblr_m8u6loy2ex1re0dy6o1_640.png";
@@ -7493,7 +7493,7 @@ default "";
 "~^/image/humor/dinosaur-comics/blindfaith.png.*$" "/image/humor/dinosaur-comics/gwern-blindfaith.png";
 "~^/image/humor/dinosaur-comics/dcpresentskinglear.png.*$" "/image/humor/dinosaur-comics/gwern-dcpresentskinglear.png";
 "~^/image/humor/dinosaur-comics/everybody-was-not-kungfu-fighting.png.*$" "/image/humor/dinosaur-comics/gwern-everybody-was-not-kungfu-fighting.png";
-"~^/image/humor/dinosaur-comics/free-penis-enlarger-50$-value.png.*$" "/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50$-value.png";
+# "~^/image/humor/dinosaur-comics/free-penis-enlarger-50\$-value.png.*$" "/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50$-value.png";
 "~^/image/humor/dinosaur-comics/gwern-a-comic-imitating-ryans-obsession-with-sex.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-a-comic-imitating-ryans-obsession-with-sex.png";
 "~^/image/humor/dinosaur-comics/gwern-a-new-oracle-for-the-ages.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-a-new-oracle-for-the-ages.png";
 "~^/image/humor/dinosaur-comics/gwern-absurdum-was-reductio.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-absurdum-was-reductio.png";
@@ -7504,8 +7504,8 @@ default "";
 "~^/image/humor/dinosaur-comics/gwern-blindfaith.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-blindfaith.png";
 "~^/image/humor/dinosaur-comics/gwern-dcpresentskinglear.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-dcpresentskinglear.png";
 "~^/image/humor/dinosaur-comics/gwern-everybody-was-not-kungfu-fighting.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-everybody-was-not-kungfu-fighting.png";
-"~^/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50\$-value.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollar-value.png";
-"~^/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50\$-value.png.*$" "/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollar-value.png";
+# "~^/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50\$-value.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollar-value.png";
+# "~^/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50\$-value.png.*$" "/image/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollar-value.png";
 "~^/image/humor/dinosaur-comics/gwern-hmm-thatsgoodmeta.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-hmm-thatsgoodmeta.png";
 "~^/image/humor/dinosaur-comics/gwern-hownottomakeacomic.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-hownottomakeacomic.png";
 "~^/image/humor/dinosaur-comics/gwern-ihadnochoiceimsorry.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-ihadnochoiceimsorry.png";
@@ -7529,8 +7529,8 @@ default "";
 "~^/image/humor/dinosaur-comics/gwern-today-we-mock-religion-ha-ha-its-all-in-good-fun.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-today-we-mock-religion-ha-ha-its-all-in-good-fun.png";
 "~^/image/humor/dinosaur-comics/gwern-unorthodoxy-thebestkindoforthodoxy.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-unorthodoxy-thebestkindoforthodoxy.png";
 "~^/image/humor/dinosaur-comics/gwern-wishing-something-into-existence-is-hip.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-wishing-something-into-existence-is-hip.png";
-"~^/image/humor/dinosaur-comics/gwern-x-x-y=1.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-x-x-y=1.png";
-"~^/image/humor/dinosaur-comics/gwern-x-x-y=1.png.*$" "/image/humor/dinosaur-comics/gwern-xminusxminusyequals1.png";
+"~^/image/humor/dinosaur-comics/gwern-x-x-y\=1.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-x-x-y=1.png";
+"~^/image/humor/dinosaur-comics/gwern-x-x-y\=1.png.*$" "/image/humor/dinosaur-comics/gwern-xminusxminusyequals1.png";
 "~^/image/humor/dinosaur-comics/gwern-yoquierokitte.png.*$" "/image/fiction/humor/dinosaur-comics/gwern-yoquierokitte.png";
 "~^/image/humor/dinosaur-comics/hmm-thatsgoodmeta.png.*$" "/image/humor/dinosaur-comics/gwern-hmm-thatsgoodmeta.png";
 "~^/image/humor/dinosaur-comics/hownottomakeacomic.png.*$" "/image/humor/dinosaur-comics/gwern-hownottomakeacomic.png";
@@ -9050,9 +9050,52 @@ default "";
 "~^/image/zeo/zma-sleepfactors.png.*$" "/image/zeo/gwern-zma-sleepfactors.png";
 "~^/image/zeo/zma-sleepvariables.png.*$" "/image/zeo/gwern-zma-sleepvariables.png";
 "~^/doc/cs/r/2012-2013-gwner-redshift-bedtime.png.*$" "/doc/cs/r/2012-2013-gwern-redshift-bedtime.png";
-"~^/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry=pyramid1.jpg.*$" "/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry-pyramid1.jpg";
-"~^/doc/fiction/humor/dinosaur-comics/gwern-x-x-y=1.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-xminusxminusyequals1.png";
-"~^/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50$-value.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollars-value.png";
+"~^/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry\=pyramid1.jpg.*$" "/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry-pyramid1.jpg";
+"~^/doc/fiction/humor/dinosaur-comics/gwern-x-x-y\=1.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-xminusxminusyequals1.png";
+# "~^/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50\$-value.png.*$" "/doc/fiction/humor/dinosaur-comics/gwern-free-penis-enlarger-50dollars-value.png";
 "~^/doc/iq/2016-caspi-figure4-dunedin-highvslowiq-socialcosts.jpg.*$" "/doc/iq/ses/2016-caspi-figure4-dunedin-highvslowiq-socialcosts.jpg";
 "~^/doc/ai/2021-04-22-rivershavewings-clipvqgan-theshadowyhackergroupeleuther.png.*$" "/doc/ai/nn/transformer/clip/2021-04-22-rivershavewings-clipvqgan-theshadowyhackergroupeleuther.png";
 "~^/doc/ai/2020-05-02-gwern-meme-claspedarms-jukebox.png.*$" "/doc/ai/nn/transformer/gpt/jukebox/2020-05-02-gwern-meme-claspedarms-jukebox.png";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/1981-gainax-daiconiii-openinganimation-remasteredaudiovideo.mp4.*$" "/doc/anime/eva/notenki-memoirs/1981-gainax-daiconiii-openinganimation-remasteredaudiovideo.mp4";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/1983-gainax-daiconiv-openinganimation-hdcomplete.mp4.*$" "/doc/anime/eva/notenki-memoirs/1983-gainax-daiconiv-openinganimation-hdcomplete.mp4";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/1987-groupshot.jpg.*$" "/doc/anime/eva/notenki-memoirs/1987-groupshot.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/akai.jpg.*$" "/doc/anime/eva/notenki-memoirs/akai.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/anno.jpg.*$" "/doc/anime/eva/notenki-memoirs/anno.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/bang-ippongi.jpg.*$" "/doc/anime/eva/notenki-memoirs/bang-ippongi.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blessed.jpg.*$" "/doc/anime/eva/notenki-memoirs/blessed.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/class.jpg.*$" "/doc/anime/eva/notenki-memoirs/class.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/constructing-monolith.jpg.*$" "/doc/anime/eva/notenki-memoirs/constructing-monolith.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/convention.jpg.*$" "/doc/anime/eva/notenki-memoirs/convention.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/eat-with-yukino.jpg.*$" "/doc/anime/eva/notenki-memoirs/eat-with-yukino.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/farewell.jpg.*$" "/doc/anime/eva/notenki-memoirs/farewell.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/group.jpg.*$" "/doc/anime/eva/notenki-memoirs/group.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/helium.jpg.*$" "/doc/anime/eva/notenki-memoirs/helium.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/hideaki.jpg.*$" "/doc/anime/eva/notenki-memoirs/hideaki.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/kenji-tsuruta.jpg.*$" "/doc/anime/eva/notenki-memoirs/kenji-tsuruta.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/komatsu.jpg.*$" "/doc/anime/eva/notenki-memoirs/komatsu.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/little-notenki.jpg.*$" "/doc/anime/eva/notenki-memoirs/little-notenki.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/masaki-yamada.jpg.*$" "/doc/anime/eva/notenki-memoirs/masaki-yamada.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/meeting.jpg.*$" "/doc/anime/eva/notenki-memoirs/meeting.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/noda.jpg.*$" "/doc/anime/eva/notenki-memoirs/noda.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/seiun.jpg.*$" "/doc/anime/eva/notenki-memoirs/seiun.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/slacks.jpg.*$" "/doc/anime/eva/notenki-memoirs/slacks.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/yamaga.jpg.*$" "/doc/anime/eva/notenki-memoirs/yamaga.jpg";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/03-2.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/03-2.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/07-2.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/07-2.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/07-4.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/07-4.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/08-1.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/08-1.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/08-2.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/08-2.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/08-3.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/08-3.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/10-1.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/10-1.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/10-2.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/10-2.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/10-3.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/10-3.webm";
+"~^/doc/anime/eva/2002-takeda-notenkimemoirs/blue-blazes/11-1.webm.*$" "/doc/anime/eva/notenki-memoirs/blue-blazes/11-1.webm";
+"~^/doc/newsletter/2020-brown-gpt3-figure13-meanperformancescalingcurve.png.*$" "/doc/ai/nn/transformer/gpt/2020-brown-gpt3-figure13-meanperformancescalingcurve.png";
+"~^/doc/anime/eva/1990-tufte-envisioninginformation-ch3-photocopier.png.*$" "/doc/design/typography/rubrication/1990-tufte-envisioninginformation-ch3-photocopier.png";
+"~^/doc/genetics/heritable/2016-kendler.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4856545/";
+"~^/doc/statistics/prediction/2022-04-13-gwern-gwernnet-index-desktop-small.png.*$" "/doc/design/2022-04-13-gwern-gwernnet-index-desktop-small.png";
+"~^/doc/cs/linkrot/archiving/2020-12-25-gwern-gwernnet-recursivepopups.png.*$" "/doc/design/2020-12-25-gwern-gwernnet-recursivepopups.png";
+"~^/doc/philosophy/2020-02-06-gwern-gwernnet-subscripts-examples.png.*$" "/doc/design/typography/2020-02-06-gwern-gwernnet-subscripts-examples.png";
+"~^/doc/ai/nn/2016-goh-opennsfw.html.*$" "/doc/ai/nn/cnn/2016-goh-opennsfw.html";
+"~^/doc/genetics/heritable/correlation/2019-coop-illinoislongtermselectionexperiment-responsetoselection-animation.mp4.*$" "/doc/genetics/selection/artificial/2019-coop-illinoislongtermselectionexperiment-responsetoselection-animation.mp4";
+"~^/doc/psychology/1996-murphy-individualdifferencesandbehaviorinorganizations.pdf.*$" "/doc/psychology/personality/1996-murphy-individualdifferencesandbehaviorinorganizations.pdf";
