--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9099,3 +9099,14 @@ default "";
 "~^/doc/ai/nn/2016-goh-opennsfw.html.*$" "/doc/ai/nn/cnn/2016-goh-opennsfw.html";
 "~^/doc/genetics/heritable/correlation/2019-coop-illinoislongtermselectionexperiment-responsetoselection-animation.mp4.*$" "/doc/genetics/selection/artificial/2019-coop-illinoislongtermselectionexperiment-responsetoselection-animation.mp4";
 "~^/doc/psychology/1996-murphy-individualdifferencesandbehaviorinorganizations.pdf.*$" "/doc/psychology/personality/1996-murphy-individualdifferencesandbehaviorinorganizations.pdf";
+"~^/doc/ai/nn/gan/stylegan/2023-qiao.pdf.*$" "/doc/ai/nn/gan/stylegan/progan/2023-qiao.pdf";
+"~^/doc/design/typography/2005-wallace-redesign.pdf.*$" "/doc/design/typography/sidenote/2005-wallace-redesign.pdf";
+"~^/doc/ai/nn/transformer/gpt/dall-e/2020-chen.pdf.*$" "/doc/ai/nn/transformer/gpt/dall-e/1/2020-chen.pdf";
+"~^/doc/anime/eva/rebuild/2/2010-crc/Eva01,protosahaq.jpg.*$" "/doc/anime/eva/rebuild/2/2010-crc/eva01-protosahaq.jpg";
+"~^/doc/fiction/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar.*$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/doc/japan/poetry/teika/1968-oneill-review:fujiwarateikassupremepoemsofourtimes.pdf.*$" "/doc/japan/poetry/teika/1968-oneill-review-fujiwarateikassupremepoemsofourtimes.pdf";
+"~^/doc/japan/poetry/teika/1969-kato-review:fujiwarateikassupremepoemsofourtimes.pdf.*$" "/doc/japan/poetry/teika/1969-kato-review-fujiwarateikassupremepoemsofourtimes.pdf";
+"~^/doc/japan/poetry/teika/1979-morrell-review:fujiwarateikashundredpoemsequenceoftheshojiera.pdf.*$" "/doc/japan/poetry/teika/1979-morrell-review-fujiwarateikashundredpoemsequenceoftheshojiera.pdf";
+"~^/doc/japan/poetry/teika/1990-bundy-poeticapprenticeship:fujiwarateikasshogakuhyakushu.pdf.*$" "/doc/japan/poetry/teika/1990-bundy-poeticapprenticeship-fujiwarateikasshogakuhyakushu.pdf";
+"~^/doc/japan/poetry/teika/1992-hulvey-review:thetaleofmatsurafujiwarateikasexperimentinfiction.pdf.*$" "/doc/japan/poetry/teika/1992-hulvey-review-thetaleofmatsurafujiwarateikasexperimentinfiction.pdf";
+"~^/doc/rotten.com/library/crime/unsolved-crimes/d-b-cooper/FBI_81_DBCooper(180).jpg.*$" "/doc/rotten.com/library/crime/unsolved-crimes/d-b-cooper/fbi_81_dbcooper-180.jpg";
