--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8537,8 +8537,8 @@
 "~^/Examples$" "/lorem";
 "~^/'___'%20microdosing$" "/lSD-microdosing";
 "~^/LSD-microdosing,page$" "/lsd-microdosing.page";
-"~^/doc/[a-km-z].*/Lunar-sleep.*$" "/lunar-sleep";
-"~^/Lunar-sleep.page$" "/lunar-sleep.page";
+"~^/doc/[a-km-z].*/Lunar-sleep.*$" "/lunar";
+"~^/Lunar-sleep.page$" "/lunar.page";
 "~^/doc/anime/Mail-delivery$" "/mail-delivery";
 "~^docs/sociology/1974- martinson\.pdf$" "/doc/sociology/1974-martinson.pdf";
 "~^/MCTS%20AI$" "/mCTS-AI";
@@ -9833,7 +9833,6 @@
 "~^/doc/2016-moser.pdf.*$" "/doc/economics/2016-moser.pdf";
 "~^/doc/ai/scaling/hardware/favicon.ico.*$" "/static/img/favicon.png";
 "~^/doc/biology/1992-minta.pdf%5C.*$" "/doc/biology/1992-minta.pdf";
-"~^/doc/genetics/selection/www.mountimprobable.com/about.*$" "/doc/genetics/selection/www.mountimprobable.com/index.html";
 "~^/doc/personal/2013-%C3%B0$" "/doc/personal/index";
 "~^/doc/psychology/writing/favicon.ico.*$" "/static/img/favicon.png";
 "~^/doc/.*/Everything.*$" "/everything";
@@ -10113,7 +10112,6 @@
 "~^/Help$" "/design";
 "~^/doc/1957-shockley.pdf.*$" "/doc/iq/ses/1957-shockley.pdf";
 "~^/doc/ai/2020-brown.pdf.*$" "https://arxiv.org/abs/2005.14165#openai";
-"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/DNM-archive.*$" "/dnm-archive";
 "~^/changelog\.rss.*$" "https://gwern.substack.com/feed";
 "~^/changelog/rss.*$" "https://gwern.substack.com/feed";
@@ -10148,8 +10146,6 @@
 "~^/self-decrypting-file.*$" "/self-decrypting";
 "~^/static/templates$" "/static/template/";
 "~^/doc/1980-smith.pdf.*$" "/doc/genetics/heritable/correlation/1980-smith.pdf";
-"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf．.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
-"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/doc/1993-friedman.pdf.*$" "/doc/psychology/personality/conscientiousness/1993-friedman.pdf";
 "~^/doc/genetics/2016-simonti.pdf.*$" "/doc/genetics/selection/2016-simonti.pdf";
 "~^/gpt-3-fiction.*$" "/gpt-3";
@@ -10384,7 +10380,6 @@
 "~^/doc/psychology/ok$" "/doc/psychology/okcupid/index";
 "~^/doc/sociology/1981-gubaeffectiveevaluation.pdf.*$" "/doc/sociology/1981-guba-effectiveevaluation.pdf";
 "~^/doc/sociology/technology/2018-mosquera.pdf.*$" "/doc/sociology/technology/2020-mosquera.pdf";
-"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc01.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/doc/www/www.dreamsongs.com/null.*$" "https://dreamsongs.com/";
 "~^/doc/www/www.jackkinsella.ie/7f766c2f8b533e44f5a9ff02ea44573c3132557a.html/favicon.ico.*$" "https://www.jackkinsella.ie/favicon.ico";
 "~^/fACes.*$" "/face";
@@ -10664,7 +10659,6 @@
 "~^/Variables\?source=techstories.org$" "/variables";
 "~^/WiFi\?utm_source=RSS&utm_medium=feed&utm_campaign=1$" "/wifi";
 "~^/doc/1978-mccord.pdf.*$" "/doc/sociology/1978-mccord.pdf";
-"~^/doc/www/s3-us-west-.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf.*$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 "~^/static/index.html.*$" "https://github.com/gwern/gwern.net/";
 "~^/spaed-repetition.*$" "/spaced-repetition";
 "~^/DALLE-demos/image-synthesis$" "/doc/ai/nn/transformer/gpt/dall-e/index";
@@ -10871,6 +10865,85 @@
 "~^/doc/cs/1985-small.pdf.*$" "/static/404.html";
 "~^/doc/1986-landauer.pdf.*$" "/doc/psychology/1986-landauer.pdf";
 "~^/doc/psychology/okcupid/index/.*$" "/doc/psychology/okcupid/index";
+"~^/DALLE-2-API.*$" "https://openai.com/blog/dall-e-api-now-available-in-public-beta";
+"~^/DALLE-datasets.*$" "/DALL-E";
+"~^/doc/fiction/jack-vance/index.*$" "  /doc/fiction/science-fiction/index";
+"~^/doc/sociology/1962-calhoun.pdfwww.*$" "/docs/sociology/1962-calhoun.pdf";
+"~^/nicotine\.html.*$" "/nicotine";
+"~^/static/build/generateBacklinks$" "/static/build/generateBacklinks.hs";
+
+"~^/doc/dnmarchivedata/2023-03-03-2023-04-02-all-fleshed-out-transactions.csv$" "/doc/darknet-market/dnm-archive/index";
+"~^/doc/statistics/1963-anscombe.pdf$" "/doc/statistics/decision/1963-anscombe.pdf";
+"~^/static/redirect/Redirects2.hs$" "/static/redirect/nginx.conf";
+"~^/note/%C2%BF$" "/note/index";
+"~^/doc/genetics/2017-segal-twinmythconceptions-ch12.pdf$" "/doc/genetics/heritable/2017-segal-twinmythconceptions-ch12.pdf";
+"~^/doc/gan/progan/$" "/doc/ai/nn/gan/stylegan/progan/index";
+"~^/doc/2012-persol-srssitecomparison.pdf$" "/doc/psychology/spaced-repetition/2012-persol-srssitecomparison.pdf";
+"~^/Danbooru2020\?.*$" "/danbooru2020";
+"~^/turing-complete\/n.*$" "/turing-complete";
+"~^/stylegan$" "/face";
+"~^/static/build/generateBacklinks.hi$" "/static/build/generateBacklinks.hs";
+"~^/Socks\?ref.*$" "/socks";
+"~^/Silk-Road\?.*$" "/silk-road";
+"~^/security-is-a-process.*$" "https://www.schneier.com/essays/archives/2000/04/the_process_of_secur.html";
+"~^/Parasocial$" "/note/parasocial";
+"~^/modus\).*$" "/modus";
+"~^/Long-Bets\?.*$" "/long-bets";
+"~^/In-Defense-Of-Inclusionism.*$" "/inclusionism";
+"~^/gpt-3%C3.*$" "/gpt-3";
+"~^/gpt-2-music\/n.*$" "/gpt-2music";
+"~^/faces/stylegan2-ext-modifications.elongie.*$" "/face#stylegan2-ext-modifications";
+"~^/faces\?.*$" "/face";
+"~^/Embryo-selectionCesarini$" "/embryo-selection";
+"~^/doc/zeidan2010.*$" "/doc/dual-n-back/2010-zeidan.pdf";
+"~^/doc/.*/docs/anime/2019-lee.pdf$" "/doc/ai/anime/danbooru/2019-lee.pdf";
+"~^/doc/sr/docs/sr/2015-03-18-the_avid-evolutionmarketbackground-cardingforumsponzischemesle.html.*$" "/doc/darknet-market/evolution/2015-03-18-the_avid-evolutionmarketbackground-cardingforumsponzischemesle.html";
+"~^/+docs/bitcoin/1986-ijiri.pdf$" "/doc/bitcoin/1986-ijiri.pdf";
+"~^/doc/.*/Conscientiousness-and-online-education$" "/conscientiousness";
+"~^/Danbooru\?.*$" "/danbooru";
+"~^/Backstop\?.*$" "/backstop";
+"~^/DNB+meta-nalysis$" "/dnb-meta-analysis";
+"~^/DNM-archiv$" "/dnm-archive";
+"~^/Black-market+archives$" "/dnm-archive";
+"~^/DNIM-archives$" "/dnm-archives";
+"~^/ai/1988-lang.pdf$" "/doc/ai/1988-lang.pdf";
+"~^/doc/hafu/$" "/hafu";
+"~^/links.html$" "/links";
+"~^/doc/dnb/2007-mcmorris-2.pdf$" "/doc/creatine/2007-mcmorris-2.pdf";
+"~^/doc/2019-04-22-deepdotweb-dnmlist.htmlDaily$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/1996-costa.pdf$" "/doc/psychology/personality/conscientiousness/1996-costa.pdf";
+"~^/doc/2012-geng.pdf$" "/doc/modafinil/2012-geng.pdf";
+"~^/doc/2016-moon.pdf$" "/doc/longevity/2016-moon.pdf";
+"~^/doc/genetics/2015-wright.pdf$" "/doc/genetics/heritable/2015-wright.pdf";
+"~^/doc/genetics/heritable/2017-lu.pdf$" "/static/404"; # DMCA
+"~^/doc/genetics/2016-berg.pdf$" "/doc/genetics/selection/natural/human/2016-berg.pdf";
+"~^/doc/iodine/1972-fierro-ben%C3%83-tez.pdf$" "/doc/iodine/1972-fierrobenitez.pdf";
+"~^/doc/iq/2015-stirenze.pdf$" "/doc/iq/2015-strenze.pdf";
+"~^/doc/econ$" "/doc/economics/index";
+"~^/doc/philo/index$" "/doc/philosophy/index";
+"~^/doc/2004-mueller.pdf$" "/doc/modafinil/2004-muller.pdf";
+"~^/doc/genetics/2014-sariaslan-1.pdf$" "/doc/psychiatry/schizophrenia/2014-sariaslan-2.pdf";
+"~^/doc/psycholog$" "/doc/psychology/index";
+"~^/doc/2014-bimm.pdf$" "/doc/psychology/2014-bimm.pdf";
+"~^/doc/soci$" "/doc/sociology/index";
+"~^/GPT-30$" "/gpt-3";
+"~^/Modafinal$" "/modafinil";
+"~^/Nicotin$" "/nicotine";
+"~^/Nootropica$" "/nootropics/nootropics";
+"~^/Scaling-hypothesis/$" "/scaling-hypothesis";
+"~^/Slowing-Moore-Law$" "/slowing-moores-law";
+"~^/static/build/generatedirectory.hs.html.html$" "/static/build/generateDirectory.hs.html";
+"~^/static/build/generatelinkbibliography.hi$" "/static/build/generateLinkbibliography.hs";
+"~^/linkscreenshot.sh$" "/static/build/linkScreenshot.sh";
+"~^/iq/n\[.*$" "/doc/iq/index";
+"~^/scale$" "/scaling-hypothesis";
+"~^/tools$" "/tool-ai";
+"~^/tPB-Bitcoin$" "/tpb-bitcoin";
+"~^/doc/Treadmill$" "/treadmill";
+"~^/turing-compl$" "/turing-complete";
+"~^/doc/genetics/2005-liao.pdf$" "/doc/genetics/selection/2005-liao.pdf";
+"~^/static/metadata/custom.hs$" "/metadata/custom.yaml";
+"~^static/build/markdown.elc.*$" "/static/build/markdown.el";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -16242,8 +16315,6 @@
 "~^/maikesixz.*$" "/static/404";
 "~^/mafiaslot.*$" "/static/404";
 "~^/luxnordica.*$" "/static/404";
-"~^/lu.*$" "/static/404";
-"~^/lit.*$" "/static/404";
 "~^/lensoh.*$" "/static/404";
 "~^/las-vegas.*$" "/static/404";
 "~^/ivisa.*$" "/static/404";
