--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -1303,7 +1303,7 @@ default "";
 "~^/Longevity.page" "/longevity.page";
 "~^/lorem.page" "/Lorem.page";
 "~^/LSD-microdosing.page" "/lsd-microdosing.page";
-"~^/Lunar-sleep.page" "/lunar-sleep.page";
+"~^/Lunar-sleep.page" "/lunar.page";
 "~^/Mail-delivery.page" "/mail-delivery.page";
 "~^/MCTS-AI.page" "/mcts-ai.page";
 "~^/Media-RL.page" "/media-rl.page";
@@ -4788,7 +4788,7 @@ default "";
 "~^/Lorem-block$" "/lorem-block";
 "~^/Lorem-links$" "/lorem-links";
 "~^/Lorem-table$" "/lorem-table";
-"~^/Lunar-sleep$" "/lunar-sleep";
+"~^/Lunar-sleep$" "/lunar";
 "~^/notes/Fermi$" "/notes/fermi";
 "~^/notes/Lions$" "/notes/lions";
 "~^/Replication$" "/replication";
@@ -9110,3 +9110,4 @@ default "";
 "~^/doc/japan/poetry/teika/1990-bundy-poeticapprenticeship:fujiwarateikasshogakuhyakushu.pdf.*$" "/doc/japan/poetry/teika/1990-bundy-poeticapprenticeship-fujiwarateikasshogakuhyakushu.pdf";
 "~^/doc/japan/poetry/teika/1992-hulvey-review:thetaleofmatsurafujiwarateikasexperimentinfiction.pdf.*$" "/doc/japan/poetry/teika/1992-hulvey-review-thetaleofmatsurafujiwarateikasexperimentinfiction.pdf";
 "~^/doc/rotten.com/library/crime/unsolved-crimes/d-b-cooper/FBI_81_DBCooper(180).jpg.*$" "/doc/rotten.com/library/crime/unsolved-crimes/d-b-cooper/fbi_81_dbcooper-180.jpg";
+"~^/doc/anime/eva/2009-rebuild-2.22-1080p%20bluray%20dts-hd%20ma%20x264-decay.mkv_snapshot_01.51.55_%5b2010.05.28_06.12.44%5d.jpg.*$" "/doc/anime/eva/2009-rebuild-2.22-1080p_bluray_dts-hd_ma_x264-decay.mkv_snapshot_01.51.55__2010.05.28_06.12.44.jpg";
