--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9111,3 +9111,5 @@ default "";
 "~^/doc/japan/poetry/teika/1992-hulvey-review:thetaleofmatsurafujiwarateikasexperimentinfiction.pdf.*$" "/doc/japan/poetry/teika/1992-hulvey-review-thetaleofmatsurafujiwarateikasexperimentinfiction.pdf";
 "~^/doc/rotten.com/library/crime/unsolved-crimes/d-b-cooper/FBI_81_DBCooper(180).jpg.*$" "/doc/rotten.com/library/crime/unsolved-crimes/d-b-cooper/fbi_81_dbcooper-180.jpg";
 "~^/doc/anime/eva/2009-rebuild-2.22-1080p%20bluray%20dts-hd%20ma%20x264-decay.mkv_snapshot_01.51.55_%5b2010.05.28_06.12.44%5d.jpg.*$" "/doc/anime/eva/2009-rebuild-2.22-1080p_bluray_dts-hd_ma_x264-decay.mkv_snapshot_01.51.55__2010.05.28_06.12.44.jpg";
+"~^/metadata/links.hs.*$" "/metadata/sites.hs";
+"~^/metadata/today-link.html.*$" "/metadata/today-site.html";
